--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="col-md-4">
 	<a href="privacy.html" class="story bignav">
-		<h2><%= t('home.privacy') %></h2>
+		<h3><%= t('home.privacy') %></h3>
 		<hr>
 		<p>
 			<img class="icon" src="/images/userdata.svg" alt="">
@@ -22,7 +22,7 @@
 </div>
 <div class="col-md-4">
 	<a href="content.html" class="story bignav">
-		<h2><%= t('home.content') %></h2>
+		<h3><%= t('home.content') %></h3>
 		<hr>
 		<p>
 			<img class="icon" src="/images/content1.svg" alt="">
@@ -31,7 +31,7 @@
 </div>
 <div class="col-md-4">
 	<a href="faq.html" class="story bignav">
-		<h2><%= t('home.faq') %></h2>
+		<h3><%= t('home.faq') %></h3>
 		<hr>
 		<p>
 			<img class="icon" src="/images/faq.svg" alt="">
@@ -42,8 +42,8 @@
 <blockquote class="middle">
 	<p><%= t('home.quote') %></p>
 	<footer>
-	<a href="https://commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
-		<img src="/images/nadine.jpg" alt="<%= t('home.cite_image') %>">
+	<a href="https://commons.wikimedia.org/wiki/Category:Maya_Angelou#/media/File:Angelou_at_Clinton_inauguration.jpg">
+		<img src="/images/maya_angelou.jpg" alt="<%= t('home.cite_image') %>">
 	</a>
       <p><%= t('home.cite') %></p>
     </footer>
