--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -55,10 +55,8 @@
 					</div>
 				</nav>
 			</header>
-			<main role="main">
 			<%= yield %>
-			</main>
-			<footer role="contentinfo">
+			<footer>
 				<div class="footer__block col-md-5">
 					<a href="<%= locale_url('/') %>" class="home_link">
 						<img src="/images/logo.png" alt="">
@@ -75,7 +73,7 @@
 				<div class="footer__block col-md-2">
 					<ul>
 						<li><a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
-						<li><a href="./data/data_dec_2017.ods"><%= t('menu.download_data') %></a></li>
+						<li><a href="./data/data_jun_2018.ods"><%= t('menu.download_data') %></a></li>
 						<li><a href="https://wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 					</ul>
