Upgrade middleman to v4
Change-Id: I7444153dd12123a1a61c1007a9f6605595f165d9

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,7 +25,7 @@
 		<%= stylesheet_link_tag "bootstrap.min.css" %>
 		<%= stylesheet_link_tag "master.css" %>
 		<%= stylesheet_link_tag "graph.css" %>
-		<%= javascript_include_tag "all" %>
+		<%= javascript_include_tag "jquery.min", "bootstrap.min", "d3.v3.min" %>
 	</head>
 
 	<body class="<%= page_classes %>">
