--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -74,7 +74,7 @@
 					<ul>
 						<li><a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
 						<li><a href="./data/data_jun_2018.ods"><%= t('menu.download_data') %></a></li>
-						<li><a href="https://wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
+						<li><a href="https://foundation.wikimedia.org/wiki/Non-wiki_privacy_policy"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 					</ul>
 				</div>
